--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==8.1.7
 colorama==0.4.6
 fastjsonschema==2.19.1
 Flask==3.0.3
+gunicorn==20.1.0
 idna==3.10
 imbalanced-learn==0.12.4
 itsdangerous==2.2.0
